add new feature

--- a/tmux/.config/tmux/statusline.conf
+++ b/tmux/.config/tmux/statusline.conf
@@ -1,10 +1,10 @@
-# vim: ft=tmux
+# vim: ft=tmu
 set -g mode-style "fg=#ffffff,bg=#000000"
 
 set -g message-style "fg=#eee8d5,bg=#073642"
 set -g message-command-style "fg=#eee8d5,bg=#073642"
 
-set -g pane-border-style "fg=#cfc3f7"
+set -g pane-border-style "fg=#"000000"
 set -g pane-active-border-style "fg=#ffffff"
 
 set -g status "on"
