--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -4,11 +4,17 @@ set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 # action key
 unbind C-b
-set-option -g prefix C-t
+set-option -g prefix C-a
 set-option -g repeat-time 0
 set-option -g focus-events on
+set -g mouse on
 
 #### Key bindings
+unbind %
+bind | split-window -h 
+
+unbind '"'
+bind - split-window -v
 
 set-window-option -g mode-keys vi
 
@@ -40,8 +46,13 @@ bind -r C-l resize-pane -R 5
 set-option -g status-justify "left"
 #set-option utf8-default on
 #set-option -g mouse-select-pane
-set-window-option -g mode-keys vi
+
 #set-window-option -g utf8 on
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+
 # look'n feel
 set-option -g status-fg cyan
 set-option -g status-bg black
@@ -73,6 +84,12 @@ set-option -g message-style bg=colour235,fg=colour166
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
+
+# # enable pane rename
+set-option -g pane-border-format "#{pane_title} #{pane_border_status}"
+
+set-window-option -g allow-rename on
+set-option -g status-right '#(tmux show-window-options -g window-name | cut -c11-)'
 
 # clock
 set-window-option -g clock-mode-colour colour64 #green
