--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -101,5 +101,6 @@ set -g set-titles-string "#T"
 # import
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
 
-source ~/.config/tmux/statusline.conf
 source ~/.config/tmux/utility.conf
+source ~/.config/tmux/everforest.conf
+# source ~/.config/tmux/monochrome.conf
